--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 20px;
+    padding: 20px 0px;
     border-radius: 10px;
     margin-bottom: 20px;
 }
