--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -89,6 +89,8 @@
 /* Shared styles for both types of containers */
 .movie-recommend-container,
 .movie-trend-container {
+    padding-top: 10px;  /* NEW */
+    padding-bottom: 25px; /* Increased to allow for hover lift */
     overflow-x: auto;
     width: 100%;
     padding-bottom: 10px;
@@ -169,4 +171,12 @@ movie-card {
     grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
     gap: 20px;
     margin-top: 20px;
+}
+
+.movie-genres {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-top: 5px;
 }
